<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/video_text">
        <menu>
            <item
                android:id="@+id/favorite"
                android:icon="@drawable/ic_baseline_favorite_border"
                app:showAsAction="ifRoom"
                android:title="@string/favorite_text"
                />
        </menu>
    </item>

    <item android:title="@string/account_text">
        <menu>
            <item
                android:id="@+id/logout"
                android:title="@string/logout_text"
                app:showAsAction="ifRoom"
                android:icon="@drawable/ic_baseline_logout"
                />
        </menu>
    </item>
</menu>