<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.finalprojectsekolahbeta1.detailfragment.DetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".mainfragment.MainFragment">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/lorem_face_1296"
                android:scaleType="centerCrop"
                android:contentDescription="@string/backdrop_image_description"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/smallLoadingViewStyle"
                app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/thumbnail"
                app:layout_constraintTop_toTopOf="@+id/thumbnail" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/internet_fail"
                style="@style/smallLoadingViewStyle"
                android:src="@drawable/ic_baseline_no_internet"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/thumbnail"
                app:layout_constraintTop_toTopOf="@+id/thumbnail" />

            <TextView
                android:id="@+id/overview_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thumbnail"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/overview_text_label"
                style="@style/small_header" />

            <TextView
                android:id="@+id/overview_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/overview_text_label"
                app:layout_constraintStart_toStartOf="@id/overview_text_label"
                android:layout_marginEnd="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent
"               android:text="@{viewModel.currentMovie.overview}"
                tools:text="@string/lorem_ipsum_5_sentences" />

            <TextView
                android:id="@+id/video_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/small_header"
                app:layout_constraintTop_toBottomOf="@id/overview_text"
                app:layout_constraintStart_toStartOf="@id/overview_text"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/video_header_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/video_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/video_text_label"
                app:layout_constraintTop_toBottomOf="@id/video_text_label"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>