<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.finalprojectsekolahbeta1.mainfragment.MainViewModel" />
    </data>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                style="@style/small_header"
                android:id="@+id/most_popular_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/most_popular_label"
                android:layout_margin="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/most_popular_recycler_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/poster_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/most_popular_label"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:layout_marginHorizontal="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.appcompat.widget.AppCompatImageView
                loadingImage="@{viewModel.popularLoadingStatus}"
                style="@style/mediumLoadingViewStyle"
                app:layout_constraintStart_toStartOf="@id/most_popular_recycler_view"
                app:layout_constraintEnd_toEndOf="@id/most_popular_recycler_view"
                app:layout_constraintBottom_toBottomOf="@id/most_popular_recycler_view"
                app:layout_constraintTop_toTopOf="@id/most_popular_recycler_view"
                />


            <TextView
                style="@style/small_header"
                android:id="@+id/top_rated_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated_text"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintTop_toBottomOf="@id/most_popular_recycler_view"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_rated_recycler_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/poster_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_rated_label"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:layout_marginHorizontal="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.appcompat.widget.AppCompatImageView
                loadingImage="@{viewModel.topRatedLoadingStatus}"
                style="@style/mediumLoadingViewStyle"
                app:layout_constraintStart_toStartOf="@id/top_rated_recycler_view"
                app:layout_constraintEnd_toEndOf="@id/top_rated_recycler_view"
                app:layout_constraintBottom_toBottomOf="@id/top_rated_recycler_view"
                app:layout_constraintTop_toTopOf="@id/top_rated_recycler_view"
                />

            <TextView
                android:id="@+id/upcoming_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/small_header"
                app:layout_constraintTop_toBottomOf="@id/top_rated_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="36dp"
                android:layout_marginStart="24dp"
                android:text="@string/upcoming_text"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_recycler_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/poster_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upcoming_label"
                android:orientation="horizontal"
                android:layout_marginTop="6dp"
                android:layout_marginHorizontal="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.appcompat.widget.AppCompatImageView
                loadingImage="@{viewModel.upComingMovies.loadingStatus}"
                style="@style/mediumLoadingViewStyle"
                app:layout_constraintStart_toStartOf="@id/upcoming_recycler_view"
                app:layout_constraintEnd_toEndOf="@id/upcoming_recycler_view"
                app:layout_constraintBottom_toBottomOf="@id/upcoming_recycler_view"
                app:layout_constraintTop_toTopOf="@id/upcoming_recycler_view"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>